--- a/airbnb/request.html
+++ b/airbnb/request.html
@@ -18,13 +18,13 @@
         <img id="halflogo" src="../img/logo.png" />
       </div>
     </div>
-      <div class="RequestToBook">
-        <div class="icondiv">
-          <i class="fa-solid fa-chevron-left"></i>
-        </div>
-        <h1>Request to book</h1>
+    <div class="RequestToBook">
+      <div class="icondiv">
+        <i class="fa-solid fa-chevron-left"></i>
       </div>
-      <div class="parent">
+      <h1>Request to book</h1>
+    </div>
+    <div class="parent">
       <div class="parent1">
         <div class="datesDiv">
           <h2>Your trip</h2>
@@ -44,15 +44,152 @@
           </div>
         </div>
         <div class="payment">
-            <div class="Paywith">
-                <h2>Pay with</h2>
-                <div class="cardtypes">
-                    
-                </div>
+          <div class="Paywith">
+            <h2>Pay with</h2>
+            <div class="cardtypes">
+              <img
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
+              />
+              <img
+                id="mastercard"
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
+              />
+              <img
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_amex.84088b520ca1b3384cb71398095627da.svg"
+              />
+              <img
+                id="rupay"
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_rupay.f419bf8f3062eb6d2408393354129ba8.svg"
+              />
+              <img
+                id="dinersclub"
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_dinersclub.0e75154d53aa4800c036282b8e189999.svg"
+              />
+              <img
+                src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_upi.1762e17397c0d6e85fb10050020d93f4.svg"
+              />
             </div>
+          </div>
+          <div class="carddetails">
+            <div class="nameofCard">
+              <div class="iconcard">
+                <i class="fa-regular fa-credit-card"></i>
+                <p>Credit or debit card</p>
+              </div>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
+              <input id="input1" type="number" placeholder="Card number : 1234 5678 9012 3456" /><br>
+              <div class="input21">
+              <input id="input211" type="number" placeholder="Expiration : MM/YY"/>
+              <input id="input212" type="number" placeholder="CVV : 3 digits"/>
+              </div>
+            <input id="input11" type="name" placeholder="Cardholder name"/>
+          </div>
+        </div>
+        <div class="message">
+          <h3>Message the host</h3>
+          <p>
+            Share why you're travelling, who's coming with you and what you love
+            about the space.
+          </p>
+          <div class="viganeshprofile">
+            <img
+              src="https://a0.muscache.com/im/pictures/user/f195cf91-dbac-4fd2-bfc0-08187051dd80.jpg?aki_policy=profile_x_medium"
+            />
+            <div class="vigneshJoinedDate">
+              <h4>Viganesh</h4>
+              <p>Joined in 2023</p>
+            </div>
+          </div>
+          <textarea placeholder="Hi Viganesh! I'll be visiting..."></textarea>
+        </div>
+        <div class="policy">
+          <h2>Cancellation policy</h2>
+          <p>
+            <b>Free cancellation before 3 Jun.</b>Cancel before check-in on 4
+            Jun for a partial refund. <a href="#">Learn more</a>
+          </p>
+        </div>
+        <div class="GroundRules">
+          <h2>Ground rules</h2>
+          <p>
+            We ask every guest to remember a few simple things about what makes
+            a great guest.
+          </p>
+          <ul>
+            <li>Follow the house rules</li>
+            <li>Treat your Host’s home like your own</li>
+          </ul>
+        </div>
+        <div class="reservation">
+          <i class="fa-regular fa-clock"></i>
+          <p>
+            <b
+              >Your reservation won’t be confirmed until the Host accepts your
+              request (within 24 hours). </b
+            >You won’t be charged until then.
+          </p>
+        </div>
+        <div class="refundPolicy">
+          <p>
+            By selecting the button below, I agree to the<a href="#">
+              Host's House Rules</a
+            >, <a href="#">Ground rules for guests</a> ,<a href="#"
+              >Airbnb's Rebooking and Refund Policy</a
+            >
+            and that Airbnb can <a href="#"> charge my payment method</a>
+            if I’m responsible for damage. I agree to pay the total amount shown
+            if the Host accepts my booking request.
+          </p>
+          <button>Request to book</button>
         </div>
       </div>
-      <div class="parent2"></div>
+      <div class="parent2">
+        <div class="BHKPOOL">
+          <div class="TeakwoodVilla">
+            <div class="villaimg"></div>
+            <div class="infoaboutvilla">
+              <h4>3BHK W/Pool Teakwood Villa By Gemstone Hospitality</h4>
+              <p>Entire villa</p>
+              <div class="iconvilla">
+                <p><i class="fa-solid fa-star" style="color: black;"></i>5.00
+                  (7 reviews)</p>
+              </div>
+            </div>
+          </div>
+          <div class="pricedetails">
+            <h3>Price details</h3>
+            <div class="pricedetails1">
+            <div class="pricedetails11">
+              <p>₹22,000 x 5 nights</p>
+              <p><a href="#">Airbnb service fee</a></p>
+              <p><a href="#">Taxes</a></p>
+            </div>
+            <div class="pricedetails11" id="pricedetails111">
+              <p>₹1,10,000</p>
+              <p>₹15,529.47</p>
+              <p>₹19,800</p>
+            </div>
+            </div>
+          </div>
+          <div class="totalprice">
+            <p><b>Total.(<a href="#" style="color: black;">INR</a>).</b></p>
+            <p><b>₹1,45,329.47</b><br/><a href="#" style="color: black;"><b>More info</b></a></p>
+          </div>
+        </div>
+      </div>
     </div>
+    </div>
+    <div class="footer3">
+      <div class="footer31">
+        <p>© 2024 Airbnb, Inc. <a>Privacy</a> . <a>Terms</a> . <a>Sitemap</a> . <a>Company details</a></p>
+      </div>
+      <div class="footer32">
+        <p><i class="fa-solid fa-globe" id="globe"></i>English (IN)</p>
+        <p><i class="fa-solid fa-indian-rupee-sign" id="globe"></i>INR</p>
+        <i class="fa-brands fa-square-facebook" id="app"></i>
+        <i class="fa-brands fa-square-twitter" id="app"></i>
+        <i class="fa-brands fa-square-instagram" id="app"></i>
+      </div>
   </body>
 </html>
